build beta test signed apk

--- a/app/keystore/readme
+++ b/app/keystore/readme
@@ -1,10 +1,10 @@
-First and Last Name: Lemberg Solutions Limited
-Organizational Unit: Mobile Development
-Organization: Lemberg Solutions Limited
-City or Locality: London
-State or Province: London
-Country Code: UK
+First and Last Name: Solutions Anagraph inc
+Organizational Unit: R&D
+Organization: Solutions Anagraph inc
+City or Locality: Montreal
+State or Province: QC
+Country Code: CA
 
-Keystore password: lembergsolutions
-Alias: drupalcon
-Alias Password: lembergsolutions
+Keystore password: anagraph
+Alias: g2016
+Alias Password: anagraph
