--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,28 +11,28 @@
     <string name="social_events">Événements Sociaux</string>
     <string name="search">Rechercher</string>
     <string name="filter">Filtrer</string>
-    <string name="experience_level">Experience level:</string>
-    <string name="tracks">Tracks</string>
-    <string name="exp_levels">Experience Levels</string>
-    <string name="NoConnectionMessage">Internet connection is not available at this moment. Please, try later</string>
-    <string name="exp_level">Experience level:</string>
+    <string name="experience_level"></string>
+    <string name="tracks">Thèmes</string>
+    <string name="exp_levels"></string>
+    <string name="NoConnectionMessage">Aucune connexion Internet disponible pour actuellement.</string>
+    <string name="exp_level"></string>
     <string name="body_share">Hey, just thought this may be interesting for you:</string>
     <string name="title_share">Share using</string>
-    <string name="event_category">Event</string>
+    <string name="event_category"></string>
     <string name="speaker_category">Speaker</string>
     <string name="about_category">À Propos</string>
-    <string name="action_open">Open</string>
-    <string name="action_close">Close</string>
-    <string name="action_add_to_favorites">Add to favorites</string>
-    <string name="action_remove_from_favorites">Remove from favorites</string>
+    <string name="action_open">Ouvrir</string>
+    <string name="action_close">Fermer</string>
+    <string name="action_add_to_favorites">Ajouter aux favoris</string>
+    <string name="action_remove_from_favorites">Retirer des Favoris</string>
     <string name="no_apps_can_perform_this_action">No Apps can perform this action.</string>
-    <string name="share">Share</string>
-    <string name="no_search_result">No Search Result</string>
+    <string name="share">Partager</string>
+    <string name="no_search_result">Aucun Résultat</string>
     <string name="TWITTER">TWITTER</string>
     <string name="WEBSITE">WEBSITE</string>
     <string name="lorem_ipsum">Lorem ipsum</string>
-    <string name="APPLY">APPLY</string>
-    <string name="CLEAR">CLEAR</string>
+    <string name="APPLY">Appliquer</string>
+    <string name="CLEAR">Annuler</string>
     <string name="access">ACCESS</string>
     <string name="placeholder_no_matching_events">No matching events</string>
     <string name="placeholder_sessions">Currently there are no sessions</string>
@@ -49,7 +49,7 @@
     <string name="twenty_four_hours">24 HOURS</string>
     <string name="Attention">Attention</string>
     <string name="start_in_5_minutes">" starts in 5 minutes"</string>
-    <string name="to">to %s</string>
+    <string name="to">à %s</string>
     <string name="speaker_separator">", "</string>
     <string name="css"><![CDATA[<link rel=\'stylesheet\' href=\'css/style.css\' type=\'text/css\'>]]></string>
     <string name="irrelevant_timezone_notificaiton"
